2020-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp (makeOption): Update from now-deprecated
	FDEuropeanEngine to FdBlackScholesVanillaEngine
	(getCallabilitySchedule): Update from now-deprecated
	Callability::Price to Bond::Price

2019-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release
	
	* src/calendars.cpp (getCalendar): Allow for Null calendar

2019-08-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.10

        * configure.ac: Mark as 0.4.10
        * configure: Rebuilt

2019-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Add -t unstable to get QuantLib 1.16
	
2019-08-06  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: Updated for QuantLib 1.16 (for current and next
	Window toolchain)
	* tools/winlibs.R: Idem

2019-05-15  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.9

        * configure.ac: Mark as 0.4.9
        * configure: Rebuilt

2019-05-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): New minor version

	* src/asian.cpp: Use QuantLib::ext namespace for shared_ptr
        * src/bermudan.cpp: Idem
	* src/calendars.cpp: Idem
	* inst/include/rquantlib_internal.h: Idem

2019-03-17  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.8

        * configure.ac: Mark as 0.4.8
        * configure: Rebuilt

2019-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Use QuantLib::ext for shared_ptr
        * src/curves.cpp: Idem
        * src/discount.cpp: Idem
        * src/hullwhite.cpp: Idem
        * src/implieds.cpp: Idem
        * src/sabr.cpp: Idem
        * src/schedule.cpp: Idem
        * src/utils.cpp: Idem
        * src/vanilla.cpp: Idem
        * src/zero.cpp: Idem

	* src/*: Removed Emacs formatting header line
	* inst/include/*: Idem
	* .editorconfig: Added to provide consistent settings
